@@ -34,11 +34,10 @@ typedef struct SerdWriterImpl SerdWriter;
    does not support abbreviation and is always ASCII.
 */
 typedef enum {
-  SERD_WRITE_ABBREVIATED = 1U << 0U, ///< Abbreviate triples when possible
-  SERD_WRITE_ASCII       = 1U << 1U, ///< Escape all non-ASCII characters
-  SERD_WRITE_RESOLVED    = 1U << 2U, ///< Resolve URIs against base URI
-  SERD_WRITE_CURIED      = 1U << 3U, ///< Shorten URIs into CURIEs
-  SERD_WRITE_BULK        = 1U << 4U, ///< Write output in pages
+  SERD_WRITE_ASCII       = 1U << 0U, ///< Escape all non-ASCII characters
+  SERD_WRITE_UNQUALIFIED = 1U << 1U, ///< Do not shorten URIs into CURIEs
+  SERD_WRITE_UNRESOLVED  = 1U << 2U, ///< Do not make URIs relative
+  SERD_WRITE_BULK        = 1U << 3U, ///< Write output in pages
 } SerdWriterFlag;
 
 /// Bitwise OR of SerdWriterFlag values
