@@ -10,6 +10,7 @@ serd (1.1.1) unstable; urgency=medium
   * Remove support for Turtle named inline nodes extension
   * Remove useless character counting from API
   * Rename SerdChunk to SerdStringView
+  * Simplify writer style options
   * Use a fixed-size reader stack
   * Use char* for strings in public API
 
